[package]
name = "atlaspack_plugin_rpc"
version = "0.1.0"
edition = "2021"
description = "Atlaspack Bundler"

[features]
nodejs = ["dep:napi", "dep:serde", "dep:parking_lot", "dep:once_cell", "dep:atlaspack_napi_helpers"]

[dependencies]
atlaspack_config = { path = "../atlaspack_config" }
atlaspack_core = { path = "../atlaspack_core" }
atlaspack_napi_helpers = { path = "../atlaspack_napi_helpers", optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
napi = { workspace = true, features = ["serde"], optional = true }
serde = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
