[package]
name = "atlaspack_plugin_rpc"
version = "0.1.0"
edition = "2021"
description = "Atlaspack Bundler"

[lints]
workspace = true

[features]
nodejs = [
  # "dep:napi",
  # "dep:parking_lot",
  # "dep:once_cell",
]

[dependencies]
atlaspack_config = { path = "../atlaspack_config" }
atlaspack_core = { path = "../atlaspack_core" }
atlaspack_napi_helpers = { path = "../atlaspack_napi_helpers" }
reqwest = { workspace = true, features = ["rustls-tls"] }
edon = { workspace = true }
tracing-indicatif = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
napi = { workspace = true, features = ["serde", "compat-mode"] }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
num_cpus = { workspace = true }
home = "0.5"
