[package]
name = "atlaspack_plugin_rpc"
version = "0.1.0"
edition = { workspace = true }
description = "Atlaspack Bundler"

[lints]
workspace = true

[features]
ion = []
nodejs = [
  "dep:napi",
  "dep:serde",
  "dep:parking_lot",
  "dep:once_cell",
  "dep:atlaspack_napi_helpers",
]

[dependencies]
atlaspack_config = { path = "../atlaspack_config" }
atlaspack_core = { path = "../atlaspack_core" }
atlaspack_napi_helpers = { path = "../atlaspack_napi_helpers", optional = true }
atlaspack_package_manager = { path = "../atlaspack_package_manager" }

anyhow = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
napi = { workspace = true, features = ["serde"], optional = true }
once_cell = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
