[package]
name = "atlaspack_plugin_transformer_css"
version = "0.1.0"
authors = ["Matt Jones <mattjones701@gmail.com>"]
edition = "2021"
description = "CSS transformer plugin for the Atlaspack Bundler"

[dependencies]
anyhow = { workspace = true }
atlaspack_core = { path = "../atlaspack_core" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
lightningcss = { workspace = true, features = ["browserslist"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
