[package]
name = "atlaspack_plugin_transformer_html"
version = "0.1.0"
authors = ["Pedro Tacla Yamada <tacla.yamada@gmail.com>"]
edition = "2021"
description = "HTML transformer plugin for the Atlaspack Bundler"

[dependencies]
atlaspack_core = { path = "../atlaspack_core" }
anyhow = { workspace = true }
# Using git version because on crates.io the packages have quite stale and incompatible versions
html5ever = { workspace = true }
markup5ever = { workspace = true }
markup5ever_rcdom = { workspace = true }

[dev-dependencies]
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
pretty_assertions = { workspace = true }
