[package]
name = "atlaspack_plugin_transformer_image"
version = "0.1.0"
authors = ["Monica Olejniczak <monica.j.olejniczak@gmail.com>"]
edition = "2021"
description = "Image transformer plugin for the Atlaspack Bundler"

[dependencies]
atlaspack_core = { path = "../atlaspack_core" }

anyhow = { workspace = true }
async-trait = { workspace = true }
image = { workspace = true }
url-search-params = { workspace = true }

[dev-dependencies]
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
tokio = { workspace = true, features = ["full"] }
